--- a/templates/task_manager/index.html
+++ b/templates/task_manager/index.html
@@ -1,183 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" itemscope itemtype="http://schema.org/WebPage">
-
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="apple-touch-icon" sizes="76x76" href="{{ ASSETS_ROOT }}/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="{{ ASSETS_ROOT }}/img/favicon.png">
-
-  <title>
-    IT company task manager
-  </title>
-
-  <!--     Fonts and icons     -->
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
-  <!-- Nucleo Icons -->
-  <link href="{{ ASSETS_ROOT }}/css/nucleo-icons.css" rel="stylesheet" />
-  <link href="{{ ASSETS_ROOT }}/css/nucleo-svg.css" rel="stylesheet" />
-  <!-- Font Awesome Icons -->
-  <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
-  <!-- Material Icons -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
-  <!-- CSS Files -->
-  <link id="pagestyle" href="{{ ASSETS_ROOT }}/css/material-kit.css?v=3.0.0" rel="stylesheet" />
-
+  <meta charset="UTF-8">
+  <title>Title</title>
 </head>
-<body class="presentation-page bg-gray-200">
+<body>
 
-  {% include 'includes/navigation.html' %}
-
-  <header class="header-2">
-    <div class="page-header min-vh-75 relative" style="background-image: url('{{ ASSETS_ROOT }}/img/bg10.jpg')">
-      <span class="mask bg-gradient-primary opacity-4"></span>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-7 text-center mx-auto">
-            <h1 class="text-white pt-3 mt-n5">IT company Task manager</h1>
-            <p class="lead text-white mt-3">Write. Execute. Delete.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </header>
-  <div class="card card-body blur shadow-blur mx-3 mx-md-4 mt-n6">
-    <section class="pt-3 pb-4" id="count-stats">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-9 mx-auto py-3">
-            <div class="row">
-              <div class="col-md-4 position-relative">
-                <div class="p-3 text-center">
-                  <h1 class="text-gradient text-primary"> <span id="state2" countTo="{{ num_current_tasks }}">0</span></h1>
-                  <h5 class="mt-3">Current tasks</h5>
-                  <p class="text-sm font-weight-normal">The total number of untried tasks for the current date</p>
-                </div>
-                <hr class="vertical dark">
-              </div>
-              <div class="col-md-4 position-relative">
-                <div class="p-3 text-center">
-                  <h1 class="text-gradient text-primary"><span id="state1" countTo="{{ num_urgent_task }}">0</span></h1>
-                  <h5 class="mt-3">Urgent tasks</h5>
-                  <p class="text-sm font-weight-normal">The number of tasks with the highest priority</p>
-                </div>
-                <hr class="vertical dark">
-              </div>
-              <div class="col-md-4">
-                <div class="p-3 text-center">
-                  <h1 class="text-gradient text-primary"> <span id="state3" countTo="{{ num_completed_task }}">0</span>+</h1>
-                  <h5 class="mt-3">Completed tasks</h5>
-                  <p class="text-sm font-weight-normal">The number of tasks that have already been completed</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="py-70">
-      <div class="container">
-        <div class="row">
-          <div class="row text-center my-sm-5 mt-5">
-            <div class="col-lg-6 mx-auto">
-              <h2 class="">Don't miss the deadline</h2>
-              <p class="lead">Tasks that have an expiration date and must be completed first.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="info-horizontal bg-gradient-primary border-radius-xl d-block d-md-flex p-4">
-            <i class="material-icons text-white text-3xl">flag</i>
-            <div class="ps-0 ps-md-3 mt-3 mt-md-0">
-              <h5 class="text-white">{{ task_1.deadline }}</h5>
-              <p class="text-white">{{ task_1.name }}</p>
-              <a href="{% url 'task_manager:task-detail' pk=task_1.id %}" class="text-white icon-move-right">
-                More detail
-                <i class="fas fa-arrow-right text-sm ms-1"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 px-lg-1 mt-lg-0 mt-4">
-          <div class="info-horizontal bg-gray-100 border-radius-xl d-block d-md-flex p-4 h-100">
-            <i class="material-icons text-gradient text-primary text-3xl">receipt_long</i>
-            <div class="ps-0 ps-md-3 mt-3 mt-md-0">
-              <h5>{{ task_2.deadline }}</h5>
-              <p>{{ task_2.name }}</p>
-              <a href="{% url 'task_manager:task-detail' pk=task_2.id %}" class="text-primary icon-move-right">
-                More detail
-                <i class="fas fa-arrow-right text-sm ms-1"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 mt-lg-0 mt-4">
-          <div class="info-horizontal bg-gray-100 border-radius-xl d-block d-md-flex p-4">
-            <i class="material-icons text-gradient text-primary text-3xl">receipt_long</i>
-            <div class="ps-0 ps-md-3 mt-3 mt-md-0">
-              <h5>{{ task_3.deadline }}</h5>
-              <p>{{ task_3.name }}</p>
-              <a href="{% url 'task_manager:task-detail' pk=task_3.id %}" class="text-primary icon-move-right">
-                More detail
-                <i class="fas fa-arrow-right text-sm ms-1"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <br><br><br><br>
-  </div>
-
-  {% include 'includes/footer.html' %}
-
-  <!--   Core JS Files   -->
-  <script src="{{ ASSETS_ROOT }}/js/core/popper.min.js" type="text/javascript"></script>
-  <script src="{{ ASSETS_ROOT }}/js/core/bootstrap.min.js" type="text/javascript"></script>
-  <script src="{{ ASSETS_ROOT }}/js/plugins/perfect-scrollbar.min.js"></script>
-  <!--  Plugin for TypedJS, full documentation here: https://github.com/inorganik/CountUp.js -->
-  <script src="{{ ASSETS_ROOT }}/js/plugins/countup.min.js"></script>
-  <!--  Plugin for Parallax, full documentation here: https://github.com/dixonandmoe/rellax -->
-  <script src="{{ ASSETS_ROOT }}/js/plugins/rellax.min.js"></script>
-  <!--  Plugin for TiltJS, full documentation here: https://gijsroge.github.io/tilt.js/ -->
-  <script src="{{ ASSETS_ROOT }}/js/plugins/tilt.min.js"></script>
-  <!--  Plugin for Selectpicker - ChoicesJS, full documentation here: https://github.com/jshjohnson/Choices -->
-  <script src="{{ ASSETS_ROOT }}/js/plugins/choices.min.js"></script>
-  <!--  Plugin for Parallax, full documentation here: https://github.com/wagerfield/parallax  -->
-  <script src="{{ ASSETS_ROOT }}/js/plugins/parallax.min.js"></script>
-  <!-- Control Center for Material UI Kit: parallax effects, scripts for the example pages etc -->
-  <!--  Google Maps Plugin    -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTTfWur0PDbZWPr7Pmq8K3jiDp0_xUziI"></script>
-  <script src="{{ ASSETS_ROOT }}/js/material-kit.min.js?v=3.0.0" type="text/javascript"></script>
-  <script type="text/javascript">
-    if (document.getElementById('state1')) {
-      const countUp = new CountUp('state1', document.getElementById("state1").getAttribute("countTo"));
-      if (!countUp.error) {
-        countUp.start();
-      } else {
-        console.error(countUp.error);
-      }
-    }
-    if (document.getElementById('state2')) {
-      const countUp1 = new CountUp('state2', document.getElementById("state2").getAttribute("countTo"));
-      if (!countUp1.error) {
-        countUp1.start();
-      } else {
-        console.error(countUp1.error);
-      }
-    }
-    if (document.getElementById('state3')) {
-      const countUp2 = new CountUp('state3', document.getElementById("state3").getAttribute("countTo"));
-      if (!countUp2.error) {
-        countUp2.start();
-      } else {
-        console.error(countUp2.error);
-      };
-    }
-  </script>
 </body>
-
 </html>
