--- a/templates/task_manager/index.html
+++ b/templates/task_manager/index.html
@@ -35,7 +35,7 @@
         <div class="row">
           <div class="col-lg-7 text-center mx-auto">
             <h1 class="text-white pt-3 mt-n5">IT company Task manager</h1>
-            <p class="lead text-white mt-3">Write. Execute. Delete.</p>
+            <p class="lead text-white mt-3">Write. Control.Execute.</p>
           </div>
         </div>
       </div>
