--- a/templates/task_manager/worker_detail.html
+++ b/templates/task_manager/worker_detail.html
@@ -1,10 +1,64 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
+{% extends "layouts/base.html" %}
 
-</body>
-</html>
+{% block title %} Worker detail {% endblock %}
+
+{% block body_class %} worker-detail {% endblock %}
+
+{% block stylesheets %}{% endblock stylesheets %}
+
+{% block content %}
+
+  {% include 'includes/navigation.html' %}
+
+  <header>
+    <div class="page-header min-height-400" style="background-image: url('{{ ASSETS_ROOT }}/img/city-profile.jpg');" loading="lazy">
+      <span class="mask bg-gradient-dark opacity-4"></span>
+    </div>
+  </header>
+  <div class="card card-body blur shadow-blur mx-3 mx-md-4 mt-n6 mb-4">
+    <section class="py-sm-7 py-5 position-relative">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 mx-auto">
+            <div class="mt-n8 mt-md-n9 text-center">
+              <img class="avatar avatar-xxl shadow-xl position-relative z-index-2" src="{{ worker.image.url }}" alt="{{ worker.username }}" loading="lazy">
+            </div>
+              <div class="row py-5">
+                <div class="col-lg-7 col-md-7 z-index-2 position-relative px-md-2 px-sm-5 mx-auto">
+                  <div class="d-flex justify-content-between align-items-center mb-0">
+                    <h3 class="mb-0">{{ worker.first_name }} {{ worker.last_name }}</h3>
+                  </div>
+                    <h6 class="text-info">{{ worker.position }}</h6>
+                    <p class="text-lg mb-0"> {{ worker.email }}</p>
+                    <br><br>
+                    <a href="{% url 'task_manager:worker-update' pk=worker.id %}" class="btn btn-outline-success">Update worker</a>
+                    <a href="{% url 'task_manager:worker-delete' pk=worker.id %}" class="btn btn-outline-primary">Delete worker</a>
+                    <br><br><br>
+                    <table class="table" >
+                      <tr>
+                        <th>Worker tasks</th>
+                        <th>Task type</th>
+                        <th>Priority</th>
+                        <th>Deadline</th>
+                        <th>Is completed</th>
+                      </tr>
+                      {% for task in worker.tasks.all %}
+                        <tr>
+                          <td><a href="{% url "task_manager:task-detail" pk=task.id %}">{{ task.name }}</a></td>
+                          <td>{{ task.task_type}}</td>
+                          <td>{{ task.priority}}</td>
+                          <td>{{ task.deadline }}</td>
+                          <td>{{ task.is_completed }}</td>
+                        {% endfor %}
+                   </table>
+                </div>
+              </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
+
+{% endblock content %}
+
+{% block javascripts %}{% endblock javascripts %}
