--- a/templates/task_manager/task_detail.html
+++ b/templates/task_manager/task_detail.html
@@ -1,10 +1,75 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
+{% extends "layouts/base.html" %}
 
-</body>
-</html>
+{% block title %} Task detail {% endblock %}
+
+{% block body_class %} task-detail {% endblock %}
+
+{% block stylesheets %}{% endblock stylesheets %}
+
+{% block content %}
+
+  {% include 'includes/navigation.html' %}
+
+  <header>
+    <div class="page-header min-height-400" style="background-image: url('{{ ASSETS_ROOT }}/img/bg.jpg');" loading="lazy">
+      <span class="mask bg-gradient-dark opacity-4"></span>
+    </div>
+  </header>
+
+  <div class="card card-body blur shadow-blur mx-3 mx-md-4 mt-n6 mb-4">
+    <section class="py-sm-7 py-5 position-relative">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 mx-auto">
+            <div class="col-lg-7 col-md-7 z-index-2 position-relative px-md-2 px-sm-5 mx-auto">
+              <div class="d-flex justify-content-between align-items-center mb-0">
+                <h3 class="mb-0">{{ task.name }}</h3>
+              </div>
+              <br>
+              <p class="text-lg mb-0"> {{  task.description }} </p>
+              <br><br>
+              <a href="{% url 'task_manager:task-update' pk=task.id %}" class="btn btn-outline-success">Update task</a>
+              <a href="{% url 'task_manager:task-delete' pk=task.id %}" class="btn btn-outline-primary">Delete task</a>
+              <br><br><br>
+              <p class="text-lg mb-0">
+                <span class="h6">Task type:</span>
+                {{ task.task_type}}
+              </p>
+              <p class="text-lg mb-0">
+                <span class="h6">Priority:</span>
+                {{ task.priority}}
+              </p>
+              <p class="text-lg mb-0">
+                <span class="h6">Deadline:</span>
+                {{ task.deadline}}
+              </p>
+              <p class="text-lg mb-0">
+                <span class="h6">Is completed:</span>
+                {{ task.is_completed}}
+              </p>
+              <br><br>
+              <h4 class="mb-0">Assignees</h4>
+              <br>
+              <div class="col-8">
+                <table class="table table-borderless" >
+                  <tr>
+                    {%  for worker in  task.assignees.all %}
+                      <th style="width:200px"><img class="avatar avatar-xl shadow-xl position-relative z-index-2" src="{{ worker.image.url }}" alt="{{ worker.username }}" loading="lazy"></th>
+                    {% endfor %}
+                      </tr><tr>
+                    {%  for worker in  task.assignees.all %}
+                      <th style="width:200px"><a href="{% url "task_manager:worker-detail" pk=worker.id %}">{{ worker.first_name }} {{ worker.last_name }}<br><p class="text-info"> {{ worker.position }} </p></a></th>
+                    {% endfor %}
+                  </tr>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
+
+{% endblock content %}
+
+{% block javascripts %}{% endblock javascripts %}
