Add pagination to task_list

--- a/templates/task_manager/task_list.html
+++ b/templates/task_manager/task_list.html
@@ -51,6 +51,9 @@
                 {% endfor %}
               </table>
               <br>
+              {% block pagination %}
+                {% include "includes/pagination.html" %}
+              {% endblock %}
               <br>
             </div>
           </div>
