--- a/templates/includes/search.html
+++ b/templates/includes/search.html
@@ -1,9 +1,13 @@
+{% load crispy_forms_filters %}
+ <form action="" method="get" class="form-inline">
   <div class="container">
-    <div class="row justify-space-between py-sm-0">
+    <div class="row justify-content-lg-center py-sm-0">
       <div class="col-lg-4 mx-auto">
         <div class="input-group input-group-dynamic mb-1">
-          <span class="input-group-text"><i class="fas fa-search" aria-hidden="true"></i></span>
-          <input class="form-control" placeholder="Search" type="text" >
+          <span class="input-group-text"></span>
+          {{ search_form|crispy }}
+          <input class="btn btn-" value="🔍" placeholder="Search" type="submit" >
         </div>
       </div>
     </div>
+ </form>
