--- a/templates/task_manager/worker_detail.html
+++ b/templates/task_manager/worker_detail.html
@@ -1,5 +1,7 @@
 {% extends "layouts/base.html" %}
 
+{% load static %}
+
 {% block title %} Worker detail {% endblock %}
 
 {% block body_class %} worker-detail {% endblock %}
@@ -21,19 +23,31 @@
         <div class="row">
           <div class="col-12 mx-auto">
             <div class="mt-n8 mt-md-n9 text-center">
-              <img class="avatar avatar-xxl shadow-xl position-relative z-index-2" src="{{ worker.image.url }}" alt="{{ worker.username }}" loading="lazy">
+              {% if worker.image %}
+                <img class="avatar avatar-xxl shadow-xl position-relative z-index-2" src="{{ worker.image.url }}" alt="{{ worker.username }}" loading="lazy">
+              {% else %}
+                <img class="avatar avatar-xxl shadow-xl position-relative z-index-2" src="{% static "assets/img/cat.jpg" %}" alt="{{ worker.username }}" loading="lazy">
+              {% endif %}
             </div>
               <div class="row py-5">
                 <div class="col-lg-7 col-md-7 z-index-2 position-relative px-md-2 px-sm-5 mx-auto">
                   <div class="d-flex justify-content-between align-items-center mb-0">
                     <h3 class="mb-0">{{ worker.first_name }} {{ worker.last_name }}</h3>
                   </div>
-                    <h6 class="text-info">{{ worker.position }}</h6>
-                    <p class="text-lg mb-0"> {{ worker.email }}</p>
+                    <h6 class="text-info">{{ worker.username }}</h6>
                     <br><br>
                     <a href="{% url 'task_manager:worker-update' pk=worker.id %}" class="btn btn-outline-success">Update worker</a>
                     <a href="{% url 'task_manager:worker-delete' pk=worker.id %}" class="btn btn-outline-primary">Delete worker</a>
                     <br><br><br>
+                    <p class="text-lg mb-0">
+                      <span class="h6">Position:</span>
+                      {{ worker.position}}
+                    </p>
+                  <p class="text-lg mb-0">
+                    <span class="h6">Contact::</span>
+                      {{ worker.email}}
+                  </p>
+                  <br><br>
                     <table class="table" >
                       <tr>
                         <th>Worker tasks</th>
