--- a/templates/task_manager/worker_list.html
+++ b/templates/task_manager/worker_list.html
@@ -43,11 +43,12 @@
                 <div class="row">
                   <div class="col-lg-4 col-md-6 col-12 mt-n5">
                     <a href="javascript:;">
+                    <br>
                       <div class="p-3 pe-md-0">
                         {% if worker.image %}
                           <img class="w-100 border-radius-md shadow-lg" src="{{ worker.image.url }}" alt="image">
                         {% else %}
-                          <img class="w-100 border-radius-md shadow-lg" src="{% static "assets/img/bg.jpg" %}" alt="image1">
+                          <img class="w-100 border-radius-md shadow-lg" src="{% static "assets/img/cat.jpg" %}" alt="image1">
                         {% endif %}
                       </div>
                     </a>
@@ -55,7 +56,8 @@
                   <div class="col-lg-8 col-md-6 col-12 my-auto">
                     <div class="card-body ps-lg-0">
                       <h5 class="mb-0">{{ worker.first_name }} {{ worker.last_name }}</h5>
-                      <h6 class="text-info">{{ worker.position }}</h6>
+                      <h6 class="text-info">{{ worker.username }}</h6>
+                      <p class="mb-0">Position: {{ worker.position }}</p>
                       <p class="mb-0">Numbers of current tasks: {{ worker.tasks.count }}</p>
                       <a href="{% url 'task_manager:worker-detail' pk=worker.id %}" class="ext-info icon-move-right">
                         Read more
