--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -32,13 +32,13 @@
                   <div class="d-none d-lg-block">
                     <ul class="list-group">
                       <li class="nav-item list-group-item border-0 p-0">
-                        <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href={% url "task_manager:task-list" %}>
+                        <a class="dropdown-item py-2 ps-3 border-radius-md" href={% url "task_manager:task-list" %}>
                           <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">All tasks</h6>
                           <span class="text-sm">See all tasks</span>
                         </a>
                       </li>
                       <li class="nav-item list-group-item border-0 p-0">
-                        <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href={% url "task_manager:task-create" %}>
+                        <a class="dropdown-item py-2 ps-3 border-radius-md" href={% url "task_manager:task-create" %}>
                           <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">New task</h6>
                           <span class="text-sm">Create a new task</span>
                         </a>
@@ -57,13 +57,13 @@
                   <div class="d-none d-lg-block">
                     <ul class="list-group">
                       <li class="nav-item list-group-item border-0 p-0">
-                        <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href={% url "task_manager:worker-list" %}>
+                        <a class="dropdown-item py-2 ps-3 border-radius-md" href={% url "task_manager:worker-list" %}>
                           <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">All workers</h6>
                           <span class="text-sm">See all workers</span>
                         </a>
                       </li>
                       <li class="nav-item list-group-item border-0 p-0">
-                        <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href={% url "task_manager:worker-create" %}>
+                        <a class="dropdown-item py-2 ps-3 border-radius-md" href={% url "task_manager:worker-create" %}>
                           <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">New worker</h6>
                           <span class="text-sm">Add new worker</span>
                         </a>
